--- a/todo-be/vercel.json
+++ b/todo-be/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
   "builds": [{ "src": "api/server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/api/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/api/server.js" }],
+  "functions": {
+    "api/server.js": {
+      "maxDuration": 30
+    }
+  }
 }
