--- a/todo-be/vercel.json
+++ b/todo-be/vercel.json
@@ -1,6 +1,15 @@
 {
   "version": 2,
-  "cleanUrls": true,
-  "builds": [{ "src": "api/server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/api/server.js" }]
+  "builds": [
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
